-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b25
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8056658 | emb-9 | Unassigned | P4 | Resolved | Fixed | b25 |
| JDK-8197266 | 8u192 | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8195271 | 8u172 | Kevin Walls | P4 | Resolved | Fixed | b03 |
| JDK-8190036 | 8u162 | Kevin Walls | P4 | Resolved | Fixed | b04 |
| JDK-8183430 | 8u161 | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8177887 | 8u152 | Kevin Walls | P4 | Resolved | Fixed | b03 |
| JDK-8185191 | 8u144 | Kevin Walls | P4 | Resolved | Fixed | b31 |
| JDK-8183059 | 8u141 | Kevin Walls | P4 | Resolved | Fixed | b31 |
| JDK-8178126 | 8u131 | Kevin Walls | P4 | Closed | Fixed | b31 |
| JDK-8192184 | emb-8u161 | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8178270 | 7u171 | Kevin Walls | P4 | Resolved | Fixed | b01 |
| JDK-8182430 | 7u151 | Kevin Walls | P4 | Resolved | Fixed | b31 |
| JDK-8179922 | 7u141 | Kevin Walls | P4 | Closed | Fixed | b32 |
In particular it is useful for diagnosing possible false sharing between
hot fields in data structures.
- backported by
-
JDK-8056658 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8177887 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8178270 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8182430 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8183059 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8183430 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8185191 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8190036 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8192184 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8195271 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8197266 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Resolved
-
-
JDK-8178126 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Closed
-
-
JDK-8179922 expose L1_data_cache_line_size for diagnostic/sanity checks
-
- Closed
-
- relates to
-
JDK-8244376 possibly stale comment above "struct SharedGlobals" in synchronizer.cpp
-
- Resolved
-