8049717: expose L1_data_cache_line_size for diagnostic/sanity checks

Add support for VM_Version::L1_data_cache_line_size().

Reviewed-by: dsimms, kvn, dholmes